--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -4,8 +4,9 @@
   @include rounded-button(7px);
   width: 70px;
   font: Arial;
-  background-color: red;
-  color: white;
+  padding: 10px 20px;
+  background-color: lime;
+  color: darkgreen;
 }
 
 #example-centered-wrapper{
@@ -20,4 +21,16 @@
   width: 50px;
   height: 50px;
   background: lime;
+}
+
+#tilty{
+  width: 50px;
+  height: 50px;
+  background: lime;
+  border: 1px solid black;
+}
+
+.grow {
+  @extend #tilty;
+  display: inline-block;
 }
