Add js to framework, starting with a tooltip fn
Store the js framework code in its own file.
Implement the tooltip as a jQuery fn.
It is part of the overall "framework" because
it depends on styles which are defined in the
Sass stylesheets.  Specifically, I have added
a "components" partial to my Sass framework,
which will be for defining styles that are associated
with elements that use (or are created by) the js
parts of the framework.

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,14 @@ input[type=text].jr-highlighted {
   .jr-grow-50:hover {
     transform: scale(1.5, 1.5); }
 
+.jr-tooltip {
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  position: absolute;
+  padding: 15px;
+  max-width: 300px;
+  border-radius: 7px; }
+
 #example-rounded {
   cursor: pointer;
   border-radius: 7px;
