Add basic outfit gallery in OOJS style

--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,14 @@ input[type=text].jr-highlighted {
   max-width: 300px;
   border-radius: 7px; }
 
+.outfit {
+  height: 600px;
+  width: 400px;
+  display: inline-block;
+  background-size: 400px 600px, cover;
+  background-repeat: no-repeat;
+  background-position: center center; }
+
 #example-rounded {
   cursor: pointer;
   border-radius: 7px;
